<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_from_spinner_text" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/interpolator_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/spinner_background"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/light_grey"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/interpolator_alpha"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_circle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/alpha_animation"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/interpolator_scale"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/shape_circle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/scale_animation"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/light_grey"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/interpolator_rotate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/rotate_animation"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/interpolator_translate_path"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="47dp"
                    android:background="@color/secondary_text" />

                <RelativeLayout
                    android:id="@+id/interpolator_translate"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="35dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/translate_animation"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/animate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button"
            android:text="@string/animate"
            android:textAllCaps="true"
            android:textColor="@color/primary_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_margin="10dp"/>

        <include layout="@layout/layout_interpolator_graph" />

    </LinearLayout>
</android.support.v7.widget.CardView>